# Bitly

./: .env-sample  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 13b88e2b7011_add_expire_time_to_urls.py  bb965407d943_initial.py
app/: config.py  crud.py  dependencies.py  main.py  middleware.py  models.py  schemas.py
app/routers/: urls.py
static/: index.css
templates/: index.html
tests/: conftest.py  test_urls.py
